@@ -1,10 +1,6 @@
 package com.game.server;
 
 import com.game.server.db.DatabaseManager;
-import com.game.server.db.SoftwareVersionRepository;
-import com.game.server.db.UserRepository;
-import com.game.server.ui.AdminApp;
-import javafx.application.Application;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -15,7 +11,7 @@ import org.slf4j.LoggerFactory;
  *   ./gradlew :server:run
  * or build a fat JAR:
  *   ./gradlew :server:jar
- *   java -jar server/build/libs/game-server.jar
+ *   java --enable-preview -jar server/build/libs/game-server.jar
  */
 public class ServerMain {
 
@@ -35,47 +31,20 @@ public class ServerMain {
                 config.getDbPassword()
         );
 
-        new UserRepository().createAdminIfNotExists(
-                config.getAdminUsername(), config.getAdminPassword());
-
-        log.info("Server version: {}", config.getVersion());
-        UDPServer server = new UDPServer(config.getPort(), config.getVersion(), config.getMinClientVersion(), config.getHttpPort());
-
-        AssetHttpServer assetServer = new AssetHttpServer(
-                config.getHttpPort(), config.getAssetsDir(), server.getAuthHandler());
-        try {
-            assetServer.start();
-        } catch (Exception e) {
-            log.error("Failed to start asset HTTP server: {}", e.getMessage(), e);
-            System.exit(1);
-        }
+        UDPServer server = new UDPServer(config.getPort());
 
         Runtime.getRuntime().addShutdownHook(Thread.ofPlatform()
                 .name("shutdown-hook")
                 .unstarted(() -> {
                     log.info("Shutdown signal received — stopping server …");
                     server.stop();
-                    assetServer.stop();
                 }));
 
-        // Run UDP server on a background thread so JavaFX can own the main thread
-        Thread serverThread = Thread.ofPlatform()
-                .name("udp-server")
-                .start(() -> {
-                    try {
-                        server.start();
-                    } catch (Exception e) {
-                        log.error("Fatal server error: {}", e.getMessage(), e);
-                        System.exit(1);
-                    }
-                });
-
-        // Pass the GameHandler to the admin UI before launching
-        AdminApp.init(server.getGameHandler(), config.getPort(),
-                new SoftwareVersionRepository(DatabaseManager.getInstance()));
-        Application.launch(AdminApp.class, args);
-
-        // JavaFX exited — stop the server
-        server.stop();
+        try {
+            server.start();
+        } catch (Exception e) {
+            log.error("Fatal server error: {}", e.getMessage(), e);
+            System.exit(1);
+        }
     }
 }
